# kipcon

./: .gitignore  LICENSE  README.md  appveyor.yml  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: python-app.yml
docker/: dockerfile
project_files/UMLs/: basic_working.drawio  db_diagram.drawio.xml
src/.confiles/: dat.ini
src/kipcon/kipdb/: __init__.py  conf.ini  database.py  database_actions.py  kipcon_main.db  kipdb.py  models.py
tests/: test_kipcon_general.py  test_ptive.py
tests/db_tests/: database_setup.py  db_transactions.py  module_connection.py
