[metadata]
name = kipcon
description = Configuration manager
author = Suha Arslan
license = MIT
license_file = LICENSE
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3

[options]
packages =
    kipcon
install_requires =
    pyyaml>=6.0
    fastapi>=0.86.0
    uvicorn[standard]
    pydantic>=1.10.2
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
slapping = py.typed